# CrossTrace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  aliases.txt  config.json  crosstrace.py  graph.py  history.py  ignorelist.txt  known_info.py  matcher.py  mutuals.py  parser.py  pyproject.toml  requirements.txt  reviewer.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
CrossTrace/: .gitignore  LICENSE  config.json  history.py  requirements.txt
CrossTrace/.github/ISSUE_TEMPLATE/: feature_request.md
CrossTrace/.github/workflows/: ci.yml
CrossTrace/tests/: conftest.py  test_graph.py  test_history.py  test_known_info.py  test_matcher.py  test_parser.py
