[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crosstrace"
version = "1.1.0"
description = "Cross-platform social graph analyser for exported follower/following lists. Local-only, no scraping, no APIs."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "xpux" }]
keywords = ["osint", "social-graph", "username-matching", "fuzzy-matching"]
dependencies = ["rapidfuzz>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/xpux/CrossTrace"
Issues = "https://github.com/xpux/CrossTrace/issues"

[project.scripts]
crosstrace = "crosstrace:main"

[tool.setuptools]
py-modules = ["crosstrace", "matcher", "parser", "known_info", "reviewer", "history", "graph"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E741"]
